skadi#13 fix tests